Updates, improved performance, pulling in the Chrome webview client, changing pathing

--- a/app/src/main/assets/web/app.html
+++ b/app/src/main/assets/web/app.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1 id="event">Example App</h1>
-	<script type="text/javascript" charset="utf-8" src="../../app/src/main/java/com/shanebo/meshtest/mesh.js"></script>
+	<script type="text/javascript" charset="utf-8" src="mesh.js"></script>
 	<script type="text/javascript" charset="utf-8" src="app.js"></script>
 </body>
 </html>
